--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div class="container">
 <div class="card-white" id="introduction">
     <h1>Hello everyone, I'm Théo!</h1>
-  <img src="images/photo-profil.png" class="img-circle" height="35%" width="30%" alt="photo-profile">
+  <img src="images/photo-profile.png" class="img-circle" height="35%" width="30%" alt="photo-profile">
   <p>
 Hello, my name is Sasha and this is my profile! I'm a student at Ieseg for 5 years.</p>
   <a href="https://www.ieseg.fr" target="_blank" class="btn-blue"> Discover My School</a>
