--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
  <!DOCTYPE html> 
 <html>
   <head>
-<title>Théo Martin's profile</title>
-<meta name="description" content="This is the profile of Théo">
+<title>Sasha Pariente's profile</title>
+<meta name="description" content="This is the profile of Sasha">
 <meta charset="utf-8">  
 <script src="https://kit.fontawesome.com/a949d5b5a3.js" crossorigin="anonymous"></script>
 <link href="https://fonts.googleapis.com/css2?family=Lora:wght@400;700&family=Roboto:wght@300;400;500;700;900&display=swap" rel="stylesheet">
@@ -12,45 +12,45 @@
 
 <div class="container">
 <div class="card-white" id="introduction">
-    <h1>Hello everyone, I'm Théo!</h1>
+    <h1>Hello everyone, I'm Sasha!</h1>
   <img src="images/photo-profil.png" class="img-circle" height="35%" width="30%" alt="photo-profile">
   <p>
-Hello, my name is Théo and this is my profile! I'm a student at Ieseg for 5 years.</p>
+Hello, my name is Sasha and this is my profile! I'm a student at Ieseg for 5 years.</p>
   <a href="https://www.ieseg.fr" target="_blank" class="btn-blue"> Discover My School</a>
 </div>
 <div class="card-white">
-        <h2>Sports</h2>
+        <h2>Hobbies</h2>
         <p>
-          I go to the gym to be fit! But I love play football with friends and whith my brother.
+          I love movie theater and spend time with my friends and my family.
         </p> 
         </div>
 <div class="card-white">
     <h2>Professionnal career</h2> 
       <p>
-        Before Paris, I was in Lyon, I came here to make management and to get a diploma.
+        Before Ieseg, I was in high school at Marie Curie in Versailles.
       </p> 
       </div>
       <div class="card-white">
       <h2>Travels</h2>
       <p>
-      I love travel, my mother was a flight attendant. So I travel all around the world, it was very fun and beatiful.
+      I love travel, I have been lucky to travel a lot since I was litte, so I have been able to visit many countries.
       </p> 
     </div>
       <div class="card-white">
       <h2>Follow me</h2>
     <ul class="list-inline">
       <li>
-      <a href="https://www.linkedin.com/in/théo-martin-95a877217/"target="_blank">
+      <a href="https://www.linkedin.com/in/sasha-pariente-83896b32b"target="_blank">
       <i class="fab fa-linkedin"></i>
       </a>
       </li>
       <li>
-      <a href="https://www.facebook.com/theo.martin.56027"target="_blank">
+      <a href="https://www.facebook.com/profile.php?id=61565489170998"target="_blank">
       <i class="fab fa-facebook-square"></i>
       </a>
       </li>
       <li>
-      <a href="https://www.instagram.com/thealeauu/"target="_blank">
+      <a href="https://www.instagram.com/_sasha_prt/profilecard/?igsh=aHh1aXp5N2o0NXFu"target="_blank">
       <i class="fab fa-instagram-square"></i>
       </a>
       </li>
